feat: Add tags to determine the structure of website

--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@
 
 <body>
 
+  <header>
+    <h1>gensokanji</h1>
+    <p>説明</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>Links</h2>
+      <p>説明</p>
+      <ul>
+        <li>periodic-table</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2021 元素の漢字bot (@gensokanji_bot)</p>
+  </footer>
+
 </body>
 
 </html>
