feat: Add header

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 
 <body>
 
-  <header>
-    <h1>gensokanji</h1>
-    <p>説明</p>
+  <header class="header">
+    <div class="header__container">
+      <h1 class="header__logo">gensokanji</h1>
+      <p class="header__subtitle">幻想閑事</p>
+    </div>
   </header>
 
   <main>
