feat: Add footer

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
     </section>
   </main>
 
-  <footer>
-    <p>© 2021 元素の漢字bot (@gensokanji_bot)</p>
+  <footer class="footer">
+    <div class="footer__container">
+      <p>© 2021 元素の漢字bot</p>
+    </div>
   </footer>
 
 </body>
