--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@gensokanji_bot">
   <link href="https://fonts.googleapis.com/css?family=Blinker:200,300|M+PLUS+Rounded+1c:300,500|Noto+Sans+TC:100:&display=swap" rel="stylesheet">
-  <link href="https://unpkg.com/sanitize.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css">
   <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
