--- a/index.html
+++ b/index.html
@@ -33,12 +33,31 @@
     </div>
   </header>
 
-  <main>
-    <section>
-      <h2>Links</h2>
-      <p>説明</p>
-      <ul>
-        <li>periodic-table</li>
+  <main class="main">
+    <section class="main__section">
+      <h2 class="main__title">Works</h2>
+      <ul class="main__cards-container">
+        <li class="card">
+          <div class="card__image"></div>
+          <div class="card__title">元素の漢字周期表</div>
+        </li>
+      </ul>
+    </section>
+    <section class="main__section">
+      <h2 class="main__title">Links</h2>
+      <ul class="main__cards-container">
+        <li class="card">
+          <div class="card__image"></div>
+          <div class="card__title">元素の漢字bot</div>
+        </li>
+        <li class="card">
+          <div class="card__image"></div>
+          <div class="card__title">元素の漢字botについて</div>
+        </li>
+        <li class="card">
+          <div class="card__image"></div>
+          <div class="card__title">元素の漢字クイズ</div>
+        </li>
       </ul>
     </section>
   </main>
