feat: Add loop animation to header and change base color

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       <h1 class="header__logo">gensokanji</h1>
       <p class="header__subtitle">幻想閑事</p>
     </div>
+    <img class="header__loop-skyline skyline-3" src="img/skyline3.svg">
+    <img class="header__loop-skyline skyline-3" src="img/skyline3.svg">
+    <img class="header__loop-skyline skyline-2" src="img/skyline2.svg">
+    <img class="header__loop-skyline skyline-2" src="img/skyline2.svg">
+    <img class="header__loop-skyline skyline-1" src="img/skyline1.svg">
+    <img class="header__loop-skyline skyline-1" src="img/skyline1.svg">
   </header>
 
   <main class="main">
