feat: Add enter animation to header

--- a/index.html
+++ b/index.html
@@ -31,12 +31,24 @@
       <h1 class="header__logo">gensokanji</h1>
       <p class="header__subtitle">幻想閑事</p>
     </div>
-    <img class="header__loop-skyline skyline-3" src="img/skyline3.svg">
-    <img class="header__loop-skyline skyline-3" src="img/skyline3.svg">
-    <img class="header__loop-skyline skyline-2" src="img/skyline2.svg">
-    <img class="header__loop-skyline skyline-2" src="img/skyline2.svg">
-    <img class="header__loop-skyline skyline-1" src="img/skyline1.svg">
-    <img class="header__loop-skyline skyline-1" src="img/skyline1.svg">
+    <div class="header__skyline _layer-3">
+      <img class="header__skyline-img _layer-3" src="img/skyline3.svg">
+    </div>
+    <div class="header__skyline _layer-3">
+      <img class="header__skyline-img _layer-3" src="img/skyline3.svg">
+    </div>
+    <div class="header__skyline _layer-2">
+      <img class="header__skyline-img _layer-2" src="img/skyline2.svg">
+    </div>
+    <div class="header__skyline _layer-2">
+      <img class="header__skyline-img _layer-2" src="img/skyline2.svg">
+    </div>
+    <div class="header__skyline _layer-1">
+      <img class="header__skyline-img _layer-1" src="img/skyline1.svg">
+    </div>
+    <div class="header__skyline _layer-1">
+      <img class="header__skyline-img _layer-1" src="img/skyline1.svg">
+    </div>
   </header>
 
   <main class="main">
