--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>gensokanji</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>gensokanji</title>
+
+  <!-- OGP -->
   <meta property="og:url" content="https://gensokanji.netlify.app">
   <meta property="og:type" content="website">
   <meta property="og:title" content="gensokanji">
@@ -13,15 +15,11 @@
   <meta property="og:site_name" content="gensokanji">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@gensokanji_bot">
-  <link href="https://fonts.googleapis.com/css?family=Blinker:200,300|M+PLUS+Rounded+1c:300,500|Noto+Sans+TC:100:&display=swap" rel="stylesheet">
+
+  <!-- style -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Blinker:200,300|M+PLUS+Rounded+1c:300,500|Noto+Sans+TC:100:&display=swap">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css">
-  <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
-  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <link href="https://unpkg.com/webkul-micron@1.1.6/dist/css/micron.min.css" type="text/css" rel="stylesheet">
-  <script src="https://unpkg.com/webkul-micron@1.1.6/dist/script/micron.min.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
