refactor: Don't use pseudo-classes when they have siblings of other classes

--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
       <h1 class="header__logo">gensokanji</h1>
       <p class="header__subtitle">幻想閑事</p>
     </div>
-    <div class="header__skyline _layer-3">
+    <div class="header__skyline _first _layer-3">
       <img class="header__skyline-img _layer-3" src="img/skyline3.svg">
     </div>
-    <div class="header__skyline _layer-3">
+    <div class="header__skyline _second _layer-3">
       <img class="header__skyline-img _layer-3" src="img/skyline3.svg">
     </div>
-    <div class="header__skyline _layer-2">
+    <div class="header__skyline _first _layer-2">
       <img class="header__skyline-img _layer-2" src="img/skyline2.svg">
     </div>
-    <div class="header__skyline _layer-2">
+    <div class="header__skyline _second _layer-2">
       <img class="header__skyline-img _layer-2" src="img/skyline2.svg">
     </div>
-    <div class="header__skyline _layer-1">
+    <div class="header__skyline _first _layer-1">
       <img class="header__skyline-img _layer-1" src="img/skyline1.svg">
     </div>
-    <div class="header__skyline _layer-1">
+    <div class="header__skyline _second _layer-1">
       <img class="header__skyline-img _layer-1" src="img/skyline1.svg">
     </div>
   </header>
