--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       <h1 class="header__logo">gensokanji</h1>
       <p class="header__subtitle">幻想閑事</p>
     </div>
+    <div class="header__cloud _first">
+      <img class="header__cloud-img" src="img/cloud.svg">
+    </div>
+    <div class="header__cloud _second">
+      <img class="header__cloud-img" src="img/cloud.svg">
+    </div>
     <div class="header__skyline _first _layer-3">
       <img class="header__skyline-img _layer-3" src="img/skyline3.svg">
     </div>
