--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <h1 class="header__logo">gensokanji</h1>
       <p class="header__subtitle">幻想閑事</p>
     </div>
+    <div class="header__moon">
+      <img class="header__moon-img" src="img/moon.svg">
+    </div>
     <div class="header__cloud _first">
       <img class="header__cloud-img" src="img/cloud.svg">
     </div>
