--- a/index.html
+++ b/index.html
@@ -25,36 +25,27 @@
 <body>
 
   <header class="header">
-    <div class="header__container">
+    <div class="header__logo-container">
       <h1 class="header__logo">gensokanji</h1>
       <p class="header__subtitle">幻想閑事</p>
     </div>
-    <div class="header__moon">
-      <img class="header__moon-img" src="img/moon.svg">
+    <div class="header__moon-container">
+      <img class="header__moon" src="img/moon.svg">
     </div>
-    <div class="header__cloud _first">
-      <img class="header__cloud-img" src="img/cloud.svg">
+    <div class="header__cloud-container">
+      <img class="header__cloud" src="img/cloud.svg"><img class="header__cloud" src="img/cloud.svg">
     </div>
-    <div class="header__cloud _second">
-      <img class="header__cloud-img" src="img/cloud.svg">
+    <div class="header__skyline-container _layer-3">
+      <img class="header__skyline _layer-3" src="img/skyline3.svg">
+      <img class="header__skyline _layer-3" src="img/skyline3.svg">
     </div>
-    <div class="header__skyline _first _layer-3">
-      <img class="header__skyline-img _layer-3" src="img/skyline3.svg">
+    <div class="header__skyline-container _layer-2">
+      <img class="header__skyline _layer-2" src="img/skyline2.svg">
+      <img class="header__skyline _layer-2" src="img/skyline2.svg">
     </div>
-    <div class="header__skyline _second _layer-3">
-      <img class="header__skyline-img _layer-3" src="img/skyline3.svg">
-    </div>
-    <div class="header__skyline _first _layer-2">
-      <img class="header__skyline-img _layer-2" src="img/skyline2.svg">
-    </div>
-    <div class="header__skyline _second _layer-2">
-      <img class="header__skyline-img _layer-2" src="img/skyline2.svg">
-    </div>
-    <div class="header__skyline _first _layer-1">
-      <img class="header__skyline-img _layer-1" src="img/skyline1.svg">
-    </div>
-    <div class="header__skyline _second _layer-1">
-      <img class="header__skyline-img _layer-1" src="img/skyline1.svg">
+    <div class="header__skyline-container _layer-1">
+      <img class="header__skyline _layer-1" src="img/skyline1.svg">
+      <img class="header__skyline _layer-1" src="img/skyline1.svg">
     </div>
   </header>
 
