feat: Add links and images to main

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
       <h2 class="main__title">Works</h2>
       <ul class="main__cards-container">
         <li class="card">
-          <div class="card__image"></div>
+          <a href="http://gensokanji.s1009.xrea.com/periodic_table">
+            <div class="card__image-container">
+              <img class="card__image" src="img/periodic_table.png" alt="元素の漢字周期表">
+            </div>
+          </a>
           <div class="card__title">元素の漢字周期表</div>
         </li>
       </ul>
@@ -63,15 +67,19 @@
       <h2 class="main__title">Links</h2>
       <ul class="main__cards-container">
         <li class="card">
-          <div class="card__image"></div>
+          <a href="https://twitter.com/gensokanji_bot">
+            <div class="card__image-container">
+              <img class="card__image" src="img/gensokanji_bot.png" alt="元素の漢字bot">
+            </div>
+          </a>
           <div class="card__title">元素の漢字bot</div>
         </li>
         <li class="card">
-          <div class="card__image"></div>
-          <div class="card__title">元素の漢字botについて</div>
-        </li>
-        <li class="card">
-          <div class="card__image"></div>
+          <a href="https://quiz-maker.site/quiz/play/dBxL2220181106152109">
+            <div class="card__image-container">
+              <img class="card__image" src="img/gensokanji_quiz.png" alt="元素の漢字クイズ">
+            </div>
+          </a>
           <div class="card__title">元素の漢字クイズ</div>
         </li>
       </ul>
