style: Add new line

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <img class="header__moon" src="img/moon.svg">
     </div>
     <div class="header__cloud-container">
-      <img class="header__cloud" src="img/cloud.svg"><img class="header__cloud" src="img/cloud.svg">
+      <img class="header__cloud" src="img/cloud.svg">
+      <img class="header__cloud" src="img/cloud.svg">
     </div>
     <div class="header__skyline-container _layer-3">
       <img class="header__skyline _layer-3" src="img/skyline3.svg">
