feat: Add logo image

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
       <img class="header__skyline _layer-2" src="img/skyline2.svg">
       <img class="header__skyline _layer-2" src="img/skyline2.svg">
     </div>
+    <div class="header__logo-container">
+      <img class="header__nh" src="img/nh.svg">
+      <h1 class="header__logo">gensokanji</h1>
+      <p class="header__subtitle">幻想閑事</p>
+    </div>
     <div class="header__skyline-container _layer-1">
       <img class="header__skyline _layer-1" src="img/skyline1.svg">
       <img class="header__skyline _layer-1" src="img/skyline1.svg">
-    </div>
-    <div class="header__logo-container">
-      <h1 class="header__logo">gensokanji</h1>
-      <p class="header__subtitle">幻想閑事</p>
     </div>
   </header>
 
