update: Add brand.png and update OGP

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta property="og:url" content="https://gensokanji.netlify.app">
   <meta property="og:type" content="website">
   <meta property="og:title" content="gensokanji">
-  <meta property="og:description" content="This is the top page of gensokanji.">
-  <!-- <meta property="og:image" content="https://gensokanji.netlify.app/img/brand.png"> -->
+  <meta property="og:description" content="今まで作ったものやリンクなどを載せていきます。">
+  <meta property="og:image" content="https://gensokanji.netlify.app/img/brand.png">
   <meta property="og:site_name" content="gensokanji">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@gensokanji_bot">
