--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <footer class="footer">
     <div class="footer__container">
-      <p>© 2021 元素の漢字bot</p>
+      <p>© 2021 gensokanji</p>
     </div>
   </footer>
 
