feat: Add share

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
   <!-- style -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Blinker:200,300|M+PLUS+Rounded+1c:300,500|Noto+Sans+TC:100:&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -87,6 +89,31 @@
       </ul>
     </section>
   </main>
+
+  <section class="share">
+    <div class="share__container">
+      <ul class="share__links-container">
+        <li class="share__link _twitter">
+          <a target="_blank" rel="noreferrer noopener" href="https://twitter.com/share?url=https://gensokanji.netlify.app&text=gensokanji%20@gensokanji_bot">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li class="share__link _facebook">
+          <a target="_blank" rel="noreferrer noopener" href="https://www.facebook.com/sharer/sharer.php?u=https://gensokanji.netlify.app">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li class="share__link _line">
+          <a target="_blank" rel="noreferrer noopener" href="https://social-plugins.line.me/lineit/share?url=https://gensokanji.netlify.app">
+            <i class="fab fa-line"></i>
+          </a>
+        </li>
+      </ul>
+      <div class="share__share-icon">
+        <span class="material-icons">share</span>
+      </div>
+    </div>
+  </section>
 
   <footer class="footer">
     <div class="footer__container">
