update: Add meta description and other information in head

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>gensokanji</title>
+  <meta name="description" content="gensokanjiのトップページです。元素の漢字を中心に今まで作ったものやリンクなどを載せていきます。">
+  <link rel="canonical" href="https://gensokanji.netlify.app">
 
   <!-- OGP -->
   <meta property="og:url" content="https://gensokanji.netlify.app">
   <meta property="og:type" content="website">
   <meta property="og:title" content="gensokanji">
-  <meta property="og:description" content="今まで作ったものやリンクなどを載せていきます。">
+  <meta property="og:description" content="gensokanjiのトップページです。元素の漢字を中心に今まで作ったものやリンクなどを載せていきます。">
   <meta property="og:image" content="https://gensokanji.netlify.app/img/brand.png">
   <meta property="og:site_name" content="gensokanji">
   <meta name="twitter:card" content="summary_large_image">
