--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h2 class="main__title">Works</h2>
       <ul class="main__cards-container">
         <li class="card">
-          <a href="http://gensokanji.s1009.xrea.com/periodic_table">
+          <a href="https://gensokanji.netlify.app/periodic-table">
             <div class="card__image-container">
               <img class="card__image" src="img/periodic_table.png" alt="元素の漢字周期表">
             </div>
