update: Add external link icons

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
               <img class="card__image" src="img/gensokanji_bot.png" alt="元素の漢字bot">
             </div>
           </a>
-          <div class="card__title">元素の漢字bot</div>
+          <div class="card__title">
+            元素の漢字bot <i class="fas fa-external-link-alt"></i>
+          </div>
         </li>
         <li class="card">
           <a href="https://quiz-maker.site/quiz/play/dBxL2220181106152109">
@@ -86,7 +88,9 @@
               <img class="card__image" src="img/gensokanji_quiz.png" alt="元素の漢字クイズ">
             </div>
           </a>
-          <div class="card__title">元素の漢字クイズ</div>
+            <div class="card__title">
+              元素の漢字クイズ <i class="fas fa-external-link-alt"></i>
+            </div>
         </li>
       </ul>
     </section>
