update: Change external links to open in new tab

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h2 class="main__title">Links</h2>
       <ul class="main__cards-container">
         <li class="card">
-          <a href="https://twitter.com/gensokanji_bot">
+          <a target="_blank" rel="noreferrer noopener" href="https://twitter.com/gensokanji_bot">
             <div class="card__image-container">
               <img class="card__image" src="img/gensokanji_bot.png" alt="元素の漢字bot">
             </div>
@@ -83,7 +83,7 @@
           </div>
         </li>
         <li class="card">
-          <a href="https://quiz-maker.site/quiz/play/dBxL2220181106152109">
+          <a target="_blank" rel="noreferrer noopener" href="https://quiz-maker.site/quiz/play/dBxL2220181106152109">
             <div class="card__image-container">
               <img class="card__image" src="img/gensokanji_quiz.png" alt="元素の漢字クイズ">
             </div>
