update: Change position of external link icons

--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
           <a target="_blank" rel="noreferrer noopener" href="https://twitter.com/gensokanji_bot">
             <div class="card__image-container">
               <img class="card__image" src="img/gensokanji_bot.png" alt="元素の漢字bot">
+              <div class="card__image-inset-shadow"></div>
+              <i class="card__external-link-icon fas fa-external-link-alt"></i>
             </div>
           </a>
-          <div class="card__title">
-            元素の漢字bot <i class="fas fa-external-link-alt"></i>
-          </div>
+          <div class="card__title">元素の漢字bot</div>
         </li>
         <li class="card">
           <a target="_blank" rel="noreferrer noopener" href="https://quiz-maker.site/quiz/play/dBxL2220181106152109">
             <div class="card__image-container">
               <img class="card__image" src="img/gensokanji_quiz.png" alt="元素の漢字クイズ">
+              <div class="card__image-inset-shadow"></div>
+              <i class="card__external-link-icon fas fa-external-link-alt"></i>
             </div>
           </a>
-            <div class="card__title">
-              元素の漢字クイズ <i class="fas fa-external-link-alt"></i>
-            </div>
+            <div class="card__title">元素の漢字クイズ</div>
         </li>
       </ul>
     </section>
