add: Add gtag.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <meta name="description" content="gensokanjiのトップページです。元素の漢字を中心に今まで作ったものやリンクなどを載せていきます。">
   <link rel="canonical" href="https://gensokanji.netlify.app">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GBVV8SS85F"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GBVV8SS85F');
+  </script>
+
   <!-- OGP -->
   <meta property="og:url" content="https://gensokanji.netlify.app">
   <meta property="og:type" content="website">
