--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <footer class="footer">
     <div class="footer__container">
-      <p>© 2021 gensokanji</p>
+      <p>© 2021-2022 gensokanji</p>
     </div>
   </footer>
 
